5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1764_1577.log
== TEST (2019-05-21 17:22:41) 
-- CODE:
from numpy import *
a = float(input("Digite: "))
vo = float(input("Digite: "))
n = int(input("Digite: "))
d0 = ((a*0**2)/2) + vo*0
d1 = ((a*1**2)/2) + vo*1
d2 = ((a*2**2)/2) + vo*2
print(array[d0,d1,d2])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:23:44) 
-- CODE:
from numpy import *
a = float(input("Digite: "))
vo = float(input("Digite: "))
n = int(input("Digite: "))
d0 = ((a*0**2)/2) + vo*0
d1 = ((a*1**2)/2) + vo*1
d2 = ((a*2**2)/2) + vo*2
vet = array([d0,d1,d2])
print(vet
-- ERROR:
File "XXXX", line 10
    
             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:23:48) 
-- CODE:
from numpy import *
a = float(input("Digite: "))
vo = float(input("Digite: "))
n = int(input("Digite: "))
d0 = ((a*0**2)/2) + vo*0
d1 = ((a*1**2)/2) + vo*1
d2 = ((a*2**2)/2) + vo*2
vet = array([d0,d1,d2])
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
